[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/objects/Material.gd" type="Script" id=1]
[ext_resource path="res://sprites/boom/boom0006.png" type="Texture" id=2]
[ext_resource path="res://sprites/boom/boom0001.png" type="Texture" id=3]
[ext_resource path="res://sprites/boom/boom0002.png" type="Texture" id=4]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://sounds/booom.wav" type="AudioStream" id=8]
[ext_resource path="res://sprites/boom/boom0008.png" type="Texture" id=9]
[ext_resource path="res://sprites/boom/boom0007.png" type="Texture" id=10]
[ext_resource path="res://sprites/boom/boom0004.png" type="Texture" id=11]
[ext_resource path="res://sprites/boom/boom0000.png" type="Texture" id=12]
[ext_resource path="res://sprites/boom/boom0003.png" type="Texture" id=13]
[ext_resource path="res://sprites/boom/boom0005.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[node name="Material" type="Area2D" groups=[
"material",
]]
position = Vector2( 406, 176 )
input_pickable = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AnimatedSprite"]
stream = ExtResource( 8 )
[connection signal="area_entered" from="." to="." method="_on_Material_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Material_area_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
